  * Fixed chroot generation error in case of some files not always present
    (closes: #634169).
  * Apache configuration is now split into several snippets rather than in
    one monolithic file (closes: #568532).
  * Runtime configuration is also now stored into a set of *.ini files
    marked as conffiles, so local customizations aren't overwritten
    (closes: #599274).

  [ Thorsten Glaser ]
  * Update copyright file
  * Fix broken link in /usr/share/fusionforge (Evolvis [#1638])

 -- Roland Mas <lolando@debian.org>  Fri, 29 Jul 2011 18:21:48 +0200

fusionforge (5.0.3-1) unstable; urgency=low

  * New upstream bugfix release.

 -- Roland Mas <lolando@debian.org>  Fri, 15 Apr 2011 14:55:34 +0200

fusionforge (5.0.2-5) unstable; urgency=low

  * Stop trying to copy libcap into chroot, since it's not used by PAM
    anymore and therefore not guaranteed to be present, thanks to Lucas
    Nussbaum and Hideki Yamane (closes: #604218).

 -- Roland Mas <lolando@debian.org>  Fri, 26 Nov 2010 09:50:25 +0100

fusionforge (5.0.2-4) unstable; urgency=low

  * Fixed logic in create-mailing-lists.pl script, allowing it to actually
    run (closes: #601573).
  * Also fixed the database credentials used for NSS and email forwarding
    in new installations (gforge_nss/mta -> fusionforge_nss/mta).

 -- Roland Mas <lolando@debian.org>  Fri, 29 Oct 2010 11:55:13 +0200

fusionforge (5.0.2-3) unstable; urgency=medium

  * Fixed Mediawiki creation script so it uses the appropriate database
    and user (closes: #600605).
  * Fixed hang during removal of -mta-postfix in some conditions (closes:
    #600583).
  * Plugged XSS vulnerability discovered by "Bluetouff" in
    -plugin-globalsearch.
  * Backport from trunk: stricter checking of mailing-list name during
    deletion, to avoid potential deleting of unintended lists.

 -- Roland Mas <lolando@debian.org>  Tue, 19 Oct 2010 20:44:49 +0200

fusionforge (5.0.2-2) unstable; urgency=low
