@@ -69,4 +69,5 @@ utils/inject-files.php usr/share/@OLDPACKAGE@/bin/
 utils/normalize_roles.php	usr/share/@OLDPACKAGE@/bin/
 utils/sync_unix_groups.php	usr/share/@OLDPACKAGE@/bin/
 utils/fixscripts/populate_template_project.php	usr/share/@OLDPACKAGE@/bin/
+utils/fixscripts/fix_default_role.php	usr/share/@OLDPACKAGE@/bin/
 utils/forge_set_password                usr/share/@OLDPACKAGE@/bin/
